Fix bug with content hiding behind image on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+/********** Global styles **********/
 body {
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+/********** Navbar/ header **********/
 /* Position header/navbar in front of the hero image */
 header {
     z-index: 1;
@@ -20,6 +22,21 @@ nav a, nav span, wrapper span{
 /* Align icon in navbar */
 .navbar-brand img {
     vertical-align: sub;
+}
+
+/********** Main Section **********/
+.hero-wrapper {
+    position: relative;
+}
+
+.hero-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-family: 'Rancho', cursive;
+    font-size: 5em !important;
 }
 
 @media (max-width: 768px) {
